force-app/main/default/objects/Financial_Counseling__c/Financial_Counseling__c.object-meta.xml
<CustomObject>
    <description>Tracks financial counseling sessions with shelter clients. Per SFTS workflow, financial counseling occurs at three checkpoints during a client's stay: beginning, middle, and end. Each session captures goals, current position, recommended services, and SFTS impact.</description>
    <label>Financial Counseling</label>
    <nameField>
        <displayFormat>FC-{00000}</displayFormat>
        <label>Financial Counseling Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Counseling Sessions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>