force-app/main/default/objects/Financial_Counseling__c/fields/Budgeting_Understanding__c.field-meta.xml
<CustomField>
    <fullName>Budgeting_Understanding__c</fullName>
    <description>Does the client have a basic understanding of budgeting? Captures progression across the three checkpoints.</description>
    <label>Budgeting Understanding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Intermediate</fullName>
            </value>
            <value>
                <fullName>Strong</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>