force-app/main/default/objects/Financial_Counseling__c/fields/Checkpoint__c.field-meta.xml
<CustomField>
    <fullName>Checkpoint__c</fullName>
    <description>Which of the three financial counseling checkpoints this session represents: Beginning (at intake), Middle (mid-program review), or End (at exit).</description>
    <inlineHelpText>Per SFTS workflow, financial counseling happens at intake, middle, and exit.</inlineHelpText>
    <label>Checkpoint</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Beginning</fullName>
                <default>true</default>
                <label>Beginning (Intake)</label>
            </value>
            <value>
                <fullName>Middle</fullName>
                <label>Middle (Mid-program)</label>
            </value>
            <value>
                <fullName>End</fullName>
                <label>End (Exit)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>