force-app/main/default/objects/Financial_Counseling__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The client (Contact) this financial counseling session is for.</description>
    <inlineHelpText>Required. The client receiving financial counseling.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Financial Counseling Sessions</relationshipLabel>
    <relationshipName>Financial_Counseling_Sessions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>