force-app/main/default/objects/Financial_Counseling__c/fields/Financial_Position__c.field-meta.xml
<CustomField>
    <fullName>Financial_Position__c</fullName>
    <description>Where the client is financially at this checkpoint: income, debts, savings, immediate financial concerns.</description>
    <label>Financial Position</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>