force-app/main/default/objects/Financial_Counseling__c/fields/Goals_and_Plan__c.field-meta.xml
<CustomField>
    <fullName>Goals_and_Plan__c</fullName>
    <description>Client's financial goals, job goals, and plan to achieve them. Captures the "where do you want to be" and "how will you get there" piece of the counseling session.</description>
    <label>Goals and Plan</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>