force-app/main/default/objects/Financial_Counseling__c/fields/Services_Recommended__c.field-meta.xml
<CustomField>
    <fullName>Services_Recommended__c</fullName>
    <description>Services the client says they need + services the counselor recommends to help the client meet their goals.</description>
    <label>Services Needed / Recommended</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>