force-app/main/default/objects/Financial_Counseling__c/fields/Session_Date__c.field-meta.xml
<CustomField>
    <fullName>Session_Date__c</fullName>
    <description>The date this counseling session occurred.</description>
    <label>Session Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>