force-app/main/default/objects/Financial_Counseling__c/fields/SFTS_Impact__c.field-meta.xml
<CustomField>
    <fullName>SFTS_Impact__c</fullName>
    <description>How Shelter from the Storm helped the client (primarily captured at End checkpoint, also relevant at Middle for course-correction). Useful for outcomes reporting to funders.</description>
    <label>How SFTS Helped</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>