force-app/main/default/objects/Financial_Counseling__c/validationRules/Session_Date_Not_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Session_Date_Not_Future</fullName>
    <active>true</active>
    <description>Prevents accidentally backdating future counseling sessions.</description>
    <errorConditionFormula>Session_Date__c &gt; TODAY()</errorConditionFormula>
    <errorMessage>Session Date cannot be in the future. Use today or an earlier date.</errorMessage>
</ValidationRule>