force-app/main/default/objects/Financial_Counseling__c/listViews/Recent_Sessions.listView-meta.xml
<ListView>
    <fullName>Recent_Sessions</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Checkpoint__c</columns>
    <columns>Session_Date__c</columns>
    <columns>Budgeting_Understanding__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Session_Date__c</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:90</value>
    </filters>
    <label>Recent Sessions (Last 90 Days)</label>
</ListView>